{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 234,
  "lineage": "c69eeae8-e32f-5617-203c-01a7bbb51ee8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_data/providers/Microsoft.Network/networkInterfaces/nicvmdatasat2301",
            "internal_domain_name_suffix": "olliv4hgyureloz52v3vy3ib1d.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.3.9",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/snetVirtualMachines"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-91-73-7C",
            "name": "nicvmdatasat2301",
            "private_ip_address": "10.1.3.9",
            "private_ip_addresses": [
              "10.1.3.9"
            ],
            "resource_group_name": "rg_data",
            "tags": {
              "Cost_Center": "TBD",
              "Deployment": "Terraform",
              "Environment": "Data Saturday Demo",
              "Landing_Zone": "Analytics",
              "Owner": "Reitse Eskens"
            },
            "virtual_machine_id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_data/providers/Microsoft.Compute/virtualMachines/vmdatasat23"
          },
          "dependencies": [
            "azurerm_resource_group.rg_connectivity",
            "azurerm_resource_group.rg_data",
            "azurerm_subnet.snet_vm",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "snet_vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_data/providers/Microsoft.Network/networkInterfaces/nicvmdatasat2301|/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvm",
            "network_interface_id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_data/providers/Microsoft.Network/networkInterfaces/nicvmdatasat2301",
            "network_security_group_id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvm"
          },
          "dependencies": [
            "azurerm_network_interface.vmnic",
            "azurerm_network_security_group.nsg_vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultdb",
            "location": "westeurope",
            "name": "nsgdefaultdb",
            "resource_group_name": "rg_connectivity",
            "security_rule": [],
            "tags": {
              "Cost_Center": "TBD",
              "Deployment": "Terraform",
              "Environment": "Data Saturday Demo",
              "Landing_Zone": "Analytics",
              "Owner": "Reitse Eskens"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvm",
            "location": "westeurope",
            "name": "nsgdefaultvm",
            "resource_group_name": "rg_connectivity",
            "security_rule": [],
            "tags": {
              "Cost_Center": "TBD",
              "Deployment": "Terraform",
              "Environment": "Data Saturday Demo",
              "Landing_Zone": "Analytics",
              "Owner": "Reitse Eskens"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet",
            "location": "westeurope",
            "name": "nsgdefaultvnet",
            "resource_group_name": "rg_connectivity",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "nsgsr-allow-azurecloud-outbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80"
                ],
                "direction": "Outbound",
                "name": "nsgsr-allow-internet-outbound",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "nsgsr-allow-ssh-rdp-outbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Outbound",
                "name": "nsgsr-allow-bastion-host-communication-outbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow the Azure Gateway manager inbound",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr-allow-gateway-inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "NSG rule to allow Bastion connections to the virtual network",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Inbound",
                "name": "nsgsr-allow-bastion-inbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.1.0.0/20"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Rule to allow Azure Bastion inbound traffic for secure remote desktop services",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "5701",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "nsgsr-allow-bastion-host-communication-inbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "nsg rule to allow inbound connection to the Azure data lake",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr-allow-azure-dls-inbound",
                "priority": 150,
                "protocol": "*",
                "source_address_prefix": "Storage",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "nsg rule to allow inbound connection to the Azure storage",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr-allow-azure-storage-inbound",
                "priority": 140,
                "protocol": "*",
                "source_address_prefix": "Storage",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "nsg rule to allow the Azure Load Balancer to function",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr-allow-azure-loadbalancer-inbound",
                "priority": 4095,
                "protocol": "*",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "nsg rule from Zero Trust, deny all other inbound connections.",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr-deny-all-ingress",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "nsg rule from Zero Trust, deny all other outbound connections.",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "nsgsr-deny-all-egress",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Cost_Center": "TBD",
              "Deployment": "Terraform",
              "Environment": "Data Saturday Demo",
              "Landing_Zone": "Analytics",
              "Owner": "Reitse Eskens"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowAzureCloudOutboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureCloud",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-azurecloud-outbound",
            "name": "nsgsr-allow-azurecloud-outbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowAzureDlsInboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "nsg rule to allow inbound connection to the Azure data lake",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-azure-dls-inbound",
            "name": "nsgsr-allow-azure-dls-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 150,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "Storage",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowAzureLoadBalancerInBoundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "nsg rule to allow the Azure Load Balancer to function",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-azure-loadbalancer-inbound",
            "name": "nsgsr-allow-azure-loadbalancer-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 4095,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "AzureLoadBalancer",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowAzureStorageInboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "nsg rule to allow inbound connection to the Azure storage",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-azure-storage-inbound",
            "name": "nsgsr-allow-azure-storage-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 140,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "Storage",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowBastionHostInboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Rule to allow Azure Bastion inbound traffic for secure remote desktop services",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "5701",
              "8080"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-bastion-host-communication-inbound",
            "name": "nsgsr-allow-bastion-host-communication-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowBastionHostOutboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "5701",
              "8080"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-bastion-host-communication-outbound",
            "name": "nsgsr-allow-bastion-host-communication-outbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowBastionInboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "NSG rule to allow Bastion connections to the virtual network",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "3389"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-bastion-inbound",
            "name": "nsgsr-allow-bastion-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.1.0.0/20"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowGatewayInboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow the Azure Gateway manager inbound",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-gateway-inbound",
            "name": "nsgsr-allow-gateway-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "GatewayManager",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowInternetOutboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-internet-outbound",
            "name": "nsgsr-allow-internet-outbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 130,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSQLInboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "NSG rule to allow connection to SQL database",
            "destination_address_prefix": "10.1.2.5",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "1433-1434"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-sql-inbound",
            "name": "nsgsr-allow-sql-inbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 130,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.1.0.0/20"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_mssql_server.sqlserver",
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_private_endpoint.pep_sql",
            "azurerm_resource_group.rg_connectivity",
            "azurerm_resource_group.rg_data",
            "azurerm_subnet.snet_db",
            "azurerm_virtual_network.vnet_main",
            "random_password.sqlservadminpw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "AllowSSHRDPOutboundFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "3389"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-allow-ssh-rdp-outbound",
            "name": "nsgsr-allow-ssh-rdp-outbound",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "EgressDenyAllFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "nsg rule from Zero Trust, deny all other outbound connections.",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-deny-all-egress",
            "name": "nsgsr-deny-all-egress",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "IngressDenyAllFnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "nsg rule from Zero Trust, deny all other inbound connections.",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet/securityRules/nsgsr-deny-all-ingress",
            "name": "nsgsr-deny-all-ingress",
            "network_security_group_name": "nsgdefaultvnet",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "rg_connectivity",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_connectivity",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnetcentral"
          },
          "dependencies": [
            "azurerm_resource_group.rg_connectivity",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/snetDatabases",
            "name": "snetDatabases",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_connectivity",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnetcentral"
          },
          "dependencies": [
            "azurerm_resource_group.rg_connectivity",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_connectivity",
            "virtual_network_name": "vnetcentral"
          },
          "dependencies": [
            "azurerm_resource_group.rg_connectivity",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snet_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/snetVirtualMachines",
            "name": "snetVirtualMachines",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg_connectivity",
            "service_endpoints": [
              "Microsoft.KeyVault"
            ],
            "virtual_network_name": "vnetcentral"
          },
          "dependencies": [
            "azurerm_resource_group.rg_connectivity",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "snet_bst_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet",
            "subnet_id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/AzureBastionSubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_vnet",
            "azurerm_resource_group.rg_connectivity",
            "azurerm_subnet.snet_bastion",
            "azurerm_virtual_network.vnet_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f88ad672-c5e6-4522-bb3f-e57b5c7501db",
            "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral",
            "location": "westeurope",
            "name": "vnetcentral",
            "resource_group_name": "rg_connectivity",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "security_group": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/networkSecurityGroups/nsgdefaultvnet"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/snetDatabases",
                "name": "snetDatabases"
              },
              {
                "address_prefix": "10.1.3.0/24",
                "id": "/subscriptions/814facf9-bf12-4ee9-abee-3cd632b1dcbe/resourceGroups/rg_connectivity/providers/Microsoft.Network/virtualNetworks/vnetcentral/subnets/snetVirtualMachines",
                "name": "snetVirtualMachines"
              }
            ],
            "tags": {
              "Cost_Center": "TBD",
              "Deployment": "Terraform",
              "Environment": "Data Saturday Demo",
              "Landing_Zone": "Analytics",
              "Owner": "Reitse Eskens"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg_connectivity"
          ]
        }
      ]
    }
  ]
}